--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -24,6 +24,8 @@
                 <a routerLink="create-student">Add Student</a>
                 <a routerLink="memes">Show Memes</a>
                 <a routerLink="reload">Reload</a>
+                <a routerLink="create-user">Create User</a>
+                <a routerLink="create-student-form">Create Student Form</a>
             </nav>
             <button class="logout-btn" (click)="logout()">Logout</button>
         </div>
