--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -26,6 +26,7 @@
                 <a routerLink="reload">Reload</a>
                 <a routerLink="create-user">Create User</a>
                 <a routerLink="create-student-form">Create Student Form</a>
+                <a routerLink="parent">Parent</a>
             </nav>
             <button class="logout-btn" (click)="logout()">Logout</button>
         </div>
