--- a/src/app/flipkart-cart/flipkart-cart.component.html
+++ b/src/app/flipkart-cart/flipkart-cart.component.html
@@ -6,7 +6,8 @@
                  <img src="{{data.image}}" alt="">
                 </div>
                 <div class="rating">
-                    <p>{{data.rating.rate}}</p>
+                    <!-- <p>{{data.rating.rate}}</p> -->
+                     <app-rating [rating]="data.rating.rate" class="star"></app-rating>
                 </div>
             </div>
             <div class="bottom">
