--- a/src/app/employees/employees.component.html
+++ b/src/app/employees/employees.component.html
@@ -18,7 +18,10 @@
         <tr *ngFor="let emp of employees;let i=index">
             <td>{{i}}</td>
             <td>{{emp.name}}</td>
-            <td >{{emp.experience}}</td>
+            <td >
+                <!-- {{emp.experience}} -->
+             <app-rating [rating]="emp.experience"></app-rating>
+            </td>
             <td>{{emp.package}}</td>
             <td>{{emp.role}}</td>   
             <td>
