--- a/src/app/flipkart-cart/flipkart-cart.component.css
+++ b/src/app/flipkart-cart/flipkart-cart.component.css
@@ -56,7 +56,7 @@ img{
     position: relative;
     z-index: 5;
     height: 16px;
-    width: 40px;
+    width: 20px;
     background-color: blue;
     margin-bottom: 15px;
     margin-left: 0px;
@@ -65,6 +65,10 @@ img{
     justify-content: center;
     align-items: center;
     color: white;
+}
+.star{
+    height: 100%;
+    width: 100%;
 }
 .rating p{
     margin: 0;
