--- a/src/app/calculator/calculator.component.css
+++ b/src/app/calculator/calculator.component.css
@@ -11,8 +11,8 @@ body, html {
 .parent {
     display: flex;
     justify-content: center;
-    align-items: center;
-    height: 100%;
+    /* align-items: center; */
+    height: 60%;
 }
 
 .child {
