--- a/src/app/calculator/calculator.component.html
+++ b/src/app/calculator/calculator.component.html
@@ -11,6 +11,9 @@
         <button [disabled]="!num1 || !num2" (click)="sub()">sub</button>
         <button [disabled]="!num1 || !num2" (click)="mul()">mul</button>
         <button [disabled]="!num1 || !num2" (click)="div()">div</button>
-        <h1>Result is {{result}}</h1>
+        <!-- <h1>Result is {{result}}</h1> -->
+        <h1>Result : {{result2}}</h1>
     </div>
-</div>
+</div><br>
+<hr>
+<app-operations [number1]="num1" [number2]="num2" (event)="catch($event)"></app-operations>
