--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -27,6 +27,9 @@
                 <a routerLink="create-user">Create User</a>
                 <a routerLink="create-student-form">Create Student Form</a>
                 <a routerLink="parent">Parent</a>
+                <a routerLink="sibling">Sibling</a>
+                <a routerLink="cart">Cart</a>
+                <a routerLink="to-do">To-Do</a>
             </nav>
             <button class="logout-btn" (click)="logout()">Logout</button>
         </div>
