eager loading added

--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -30,6 +30,7 @@
                 <a routerLink="sibling">Sibling</a>
                 <a routerLink="cart">Cart</a>
                 <a routerLink="to-do">To-Do</a>
+                <a routerLink="about-company">About Company</a>
             </nav>
             <button class="logout-btn" (click)="logout()">Logout</button>
         </div>
