--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -31,6 +31,9 @@
                 <a routerLink="cart">Cart</a>
                 <a routerLink="to-do">To-Do</a>
                 <a routerLink="about-company">About Company</a>
+                <a routerLink="payment/upi">Upi Payment </a>
+                <a routerLink="payment/card">Card Payment </a>
+                
             </nav>
             <button class="logout-btn" (click)="logout()">Logout</button>
         </div>
